Swagger za BookingController
